--- a/Proyecto_LDPII/src/main/resources/templates/index.html
+++ b/Proyecto_LDPII/src/main/resources/templates/index.html
@@ -27,9 +27,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div th:if="${param.error}">
-                <div class="alert alert-danger">Invalid Email or Invalid
-                    password
-                </div>
+                <div class="alert alert-danger">Datos Ingresados Incorrectos</div>
             </div>
             <div th:if="${param.logout}">
                 <div class="alert alert-success">You have been logged out</div>
@@ -42,27 +40,26 @@
                     <form method="post" role="form" th:action="@{/login}"
                           class="form-horizontal">
                         <div class="form-group mb-3">
-                            <label class="control-label">Usuario</label> <input type="text"
-                                                                                id="username" name="username"
-                                                                                class="form-control"
-                                                                                placeholder="Ingresar Usuario"/>
+                            <label class="control-label">E-mail</label>
+                            <input type="text"
+                                   id="correo" name="correo"
+                                   class="form-control"
+                                   placeholder="Ingresar E-mail"/>
                         </div>
 
                         <div class="form-group mb-3">
-                            <label class="control-label">Clave</label> <input type="text"
-                                                                              id="clave" name="clave"
-                                                                              class="form-control"
-                                                                              placeholder="Ingresar Clave"/>
+                            <label class="control-label">Clave</label>
+                            <input type="text"
+                                   id="clave" name="clave"
+                                   class="form-control"
+                                   placeholder="Ingresar Clave"/>
                         </div>
 
                         <div class="form-group mb-3">
                             <button type="submit" class="btn btn-primary">Ingresar</button>
-                            <span>Cliente Nuevo? <a th:href="@{/register}">Registrate Aquí</a>
-								</span>
+                            <span>Cliente Nuevo? <a th:href="@{/Cliente/register}">Registrate Aquí</a></span>
                         </div>
-
                     </form>
-
                 </div>
             </div>
         </div>
