--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -37,7 +37,7 @@
 
     <div class="row">
         <div class="col-lg-3">
-            <a th:href="@{/evento/new}" class="btn btn-primary btn-sm mb-3">Nuevo Evento</a>
+            <a th:href="@{/Cliente/preCreateEvento}" class="btn btn-primary btn-sm mb-3">Nuevo Evento</a>
         </div>
     </div>
 
