Agregar evento funcionando

--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -41,6 +41,12 @@
         </div>
     </div>
 
+    <div th:if="${param.success}">
+        <div class="alert alert-info">
+            Te has registrado con exito es nuestra aplicación.!
+        </div>
+    </div>
+
     <table class="table table-striped table-bordered">
         <thead class="table-dark">
         <tr>
