--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
@@ -35,32 +35,63 @@
         <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
             <h1 class="text-center">Detalles de Evento</h1>
             <div class="card-body">
+
+                <h3>Evento</h3>
+
                 <div class="form-group">
-                    <label>Nombre del Evento</label>
+                    <label>Nombre</label>
                     <input type="text" name="nombreEvento" th:value="${evento.getNombre()}"
-                           class="form-control" disabled readonly
-                           placeholder="Ingresar Nombre del Evento"/>
+                           class="form-control" disabled readonly/>
                 </div>
 
                 <div class="form-group">
-                    <label>Fecha del Evento</label>
+                    <label>Fecha</label>
                     <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
-                           class="form-control" disabled readonly
-                           placeholder="Seleccione la fecha del evento"/>
+                           class="form-control" disabled readonly/>
                 </div>
 
                 <div class="form-group">
-                    <label>Duración del Evento (Horas)</label>
+                    <label>Duración (Horas)</label>
                     <input type="number" name="horasEvento" th:value="${evento.getDuracion()}"
-                           class="form-control" disabled readonly
-                           placeholder="Ingrese cuantas horas durará el evento"/>
+                           class="form-control" disabled readonly/>
                 </div>
 
                 <div class="form-group">
                     <label>Precio</label>
                     <input type="number" name="montoEvento" th:value="${evento.getMonto()}"
-                           class="form-control" disabled readonly
-                           placeholder="Ingrese cuantas horas durará el evento"/>
+                           class="form-control" disabled readonly/>
+                </div>
+
+                <h3>Personal</h3>
+
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" name="nombrePersonal" th:value="${personal.getNombre()}"
+                           class="form-control" disabled readonly/>
+                </div>
+
+                <div class="form-group">
+                    <label>Rol</label>
+                    <input type="text" name="rolPersonal" th:value="${personal.getRol()}"
+                           class="form-control" disabled readonly/>
+                </div>
+
+                <h3>Establecimiento</h3>
+
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" name="Nombre_establecimiento" th:value="${establecimiento.getNombre()}"
+                           class="form-control" disabled readonly/>
+                </div>
+
+                <div class="form-group">
+                    <label>Direccion</label>
+                    <input type="text" name="rolPersonal" th:value="${establecimiento.getDireccion()}"
+                           class="form-control" disabled readonly/>
+                </div>
+
+                <div class="form-group">
+                    <a class="btn btn-primary" th:href="@{/Cliente/eventos}">Volver</a>
                 </div>
             </div>
         </div>
