--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -60,7 +60,7 @@
             <th>Nombre del Evento</th>
             <th>Fecha del Evento</th>
             <th>Hora(s) de duración</th>
-            <th>Costo</th>
+            <th>Costo (Sin IGV)</th>
             <th>Acciones</th>
         </tr>
         </thead>
