confirmar evento, solo falta save a factura

--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -73,6 +73,10 @@
             <td th:text="${evento.monto}"></td>
             <td>
                 <div class="btn-group">
+                    <a th:href="@{/Cliente/preConfirmarEvento/{id}(id=${evento.idEvento})}"
+                       class="btn btn-primary">Confirmar</a>
+                </div>
+                <div class="btn-group">
                     <a th:href="@{/Cliente/eliminarEvento/{id}(id=${evento.idEvento})}"
                        class="btn btn-danger">Eliminar</a>
                 </div>
