--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/confirmarEvento.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/confirmarEvento.html
@@ -2,182 +2,106 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot</title>
+    <title>Datos de Facturación - Spring Boot</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url('https://img.freepik.com/fotos-premium/fondo-azul-cuadrado-cuadrado-puntos-medio_1122354-16579.jpg');
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+        }
+        .card {
+            background-color: rgb(255 255 255 / 25%);
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+        }
+        .card h1 {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: #8ae1f3;
+        }
+        h3 {
+            color: #6c98d6;
+        }
+        .form-group label {
+            color: #c6c6c6;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/}">Reserva de Eventos</a>
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/Cliente/eventos}">Eventos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" th:href="@{/contrato}">Contratos</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/Cliente/eventos}">Eventos</a></li>
+                <li class="nav-item"><a class="nav-link" th:href="@{/Cliente/facturas}">Facturas</a></li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container mt-3">
     <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center">Datos de Facturacion</h1>
-
-            <div th:if="${param.error}">
-                <div class="alert alert-danger">
-                    Factura confirmada con exito.!
-                </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 mx-auto">
+            <div class="card p-4">
+                <h1>Datos de Facturación</h1>
+                <form th:action="@{/Cliente/createEvento}" th:object="${factura}" method="POST">
+                    <div class="card-body">
+                        <h3>Cliente</h3>
+                        <div class="form-group">
+                            <label>Nombre</label>
+                            <input type="text" name="nombreCliente" th:value="${cliente.getNombre()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <div class="form-group">
+                            <label>Correo</label>
+                            <input type="text" name="correoCliente" th:value="${cliente.getCorreo()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <div class="form-group">
+                            <label>Teléfono</label>
+                            <input type="text" name="telefonoCliente" th:value="${cliente.getTelefono()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <h3>Evento</h3>
+                        <div class="form-group">
+                            <label>Nombre</label>
+                            <input type="text" name="nombreEvento" th:value="${evento.getNombre()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <div class="form-group">
+                            <label>Fecha</label>
+                            <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <div class="form-group">
+                            <label>Monto</label>
+                            <input type="text" name="montoEvento" th:value="${evento.getMonto()}"
+                                   class="form-control" disabled readonly/>
+                        </div>
+                        <div class="btn-group mt-3">
+                            <a class="btn btn-secondary" th:href="@{/Cliente/eventos}">Volver</a>
+                            <a th:href="@{/Cliente/eventos}" class="btn btn-primary">Confirmar</a>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-            <form th:action="@{/Cliente/confirmarEvento}" th:object="${factura}" method="POST">
-
-                <div class="form-group">
-                    <input style="display: none" type="text" name="horasEvento"
-                           th:field="*{idEvento}" th:value="*{idEvento}"
-                           class="form-control" disabled/>
-                </div>
-
-                <div class="form-group">
-                    <input style="display: none" type="number" name="horasEvento"
-                           th:field="*{descuento}" th:value="*{descuento}"
-                           class="form-control" disabled/>
-                </div>
-
-                <div class="form-group">
-                    <input style="display: none" type="date" name="horasEvento"
-                           th:field="*{fecha}" th:default="*{fecha}"
-                           class="form-control" disabled/>
-                </div>
-
-                <div class="form-group">
-                    <input style="display: none" type="number" name="horasEvento"
-                           th:field="*{precioFinal}" th:value="*{precioFinal}"
-                           class="form-control" disabled/>
-                </div>
-
-                <div class="card-body">
-                    <h3>Cliente</h3>
-
-                    <div class="form-group">
-                        <label>Nombre</label>
-                        <input type="text" name="nombreCliente" th:value="${cliente.getNombre()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Correo</label>
-                        <input type="text" name="correoCliente" th:value="${cliente.getCorreo()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Telefono</label>
-                        <input type="text" name="telefonoCliente" th:value="${cliente.getTelefono()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <h3>Evento</h3>
-
-                    <div class="form-group">
-                        <label>Nombre</label>
-                        <input type="text" name="nombreEvento" th:value="${evento.getNombre()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Fecha</label>
-                        <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Duración (Horas)</label>
-                        <input type="number" name="horasEvento" th:value="${evento.getDuracion()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <h3>Personal</h3>
-
-                    <div class="form-group">
-                        <label>Nombre</label>
-                        <input type="text" name="nombrePersonal" th:value="${personal.getNombre()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Rol</label>
-                        <input type="text" name="rolPersonal" th:value="${personal.getRol()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <h3>Establecimiento</h3>
-
-                    <div class="form-group">
-                        <label>Nombre</label>
-                        <input type="text" name="Nombre_establecimiento" th:value="${establecimiento.getNombre()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <label>Direccion</label>
-                        <input type="text" name="rolPersonal" th:value="${establecimiento.getDireccion()}"
-                               class="form-control" disabled readonly/>
-                    </div>
-
-                    <h3>Detalle</h3>
-                    <h5>Costo del Local : <span>S/</span><span th:text="${establecimiento.getPrecio()}"></span></h5>
-                    <h5>Horas de Alquiler : <span th:text="${evento.getDuracion()}"></span></h5>
-                    <h5>Costo Total del Local : <span>S/</span><span th:text="${montoLocal}"></span></h5>
-                    <h5>Sueldo del Personal : <span>+ S/</span><span th:text="${personal.getMonto()}"></span></h5>
-                    <h5>Descuento : <span>- S/</span><span th:text="${montoDescuento}"></span><span> (5%)</span></h5>
-                    <h5>Monto del IGV : <span>+ S/</span><span th:text="${montoIGV}"></span><span> (18%)</span>
-                    </h5>
-                    <h5>Costo Total : <strong><span>S/</span></strong><strong><span
-                            th:text="${factura.getPrecioFinal()}"></span></strong></h5>
-
-                    <div class="form-group">
-                        <input style="display: none" type="text" name="idEvento"
-                               th:field="*{idEvento}" th:value="*{idEvento}"
-                               class="form-control" readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <input style="display: none" type="number" name="descuento"
-                               th:field="*{descuento}" th:value="*{descuento}"
-                               class="form-control" readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <input style="display: none" type="date" name="fecha"
-                               th:field="*{fecha}" th:default="*{fecha}"
-                               class="form-control" readonly/>
-                    </div>
-
-                    <div class="form-group">
-                        <input style="display: none" type="number" name="precioFinal"
-                               th:field="*{precioFinal}" th:value="*{precioFinal}"
-                               class="form-control" readonly/>
-                    </div>
-
-                    <div class="box-footer btn-group">
-                        <a class="btn btn-secondary" th:href="@{/Cliente/eventos}">Volver</a>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </div>
-
-                </div>
-            </form>
         </div>
     </div>
 </div>
