--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/detailsEvento.html
@@ -2,11 +2,50 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot</title>
+    <title>Detalles de Evento - Spring Boot</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url('https://img.freepik.com/fotos-premium/fondo-azul-cuadrado-cuadrado-puntos-medio_1122354-16579.jpg'); /* Cambia esto por la URL de tu imagen */
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+        }
+
+        .card {
+            background-color: rgb(255 255 255 / 25%);
+		    border-radius: 15px;
+		    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+		    backdrop-filter: blur(10px);
+        }
+
+        .card h1 {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: #8ae1f3;
+        }
+        
+        h3 {
+            color: #6c98d6;
+        }
+
+        .form-group label {
+                color: #c6c6c6;
+        }
+
+        .btn-primary {
+            background-color: #007bff; /* Color del botón */
+            border-color: #007bff;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3; /* Color del botón en hover */
+            border-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -24,7 +63,7 @@
                     <a class="nav-link" th:href="@{/Cliente/eventos}">Eventos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/contrato}">Contratos</a>
+                    <a class="nav-link" th:href="@{/Cliente/facturas}">Facturas</a>
                 </li>
             </ul>
         </div>
@@ -32,66 +71,65 @@
 </nav>
 <div class="container mt-3">
     <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-            <h1 class="text-center">Detalles de Evento</h1>
-            <div class="card-body">
+        <div class="col-lg-8 mx-auto">
+            <div class="card p-4">
+                <h1>Detalles de Evento</h1>
+                <div class="card-body">
 
-                <h3>Evento</h3>
+                    <h3>Evento</h3>
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text" name="nombreEvento" th:value="${evento.getNombre()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Nombre</label>
-                    <input type="text" name="nombreEvento" th:value="${evento.getNombre()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <div class="form-group">
+                        <label>Fecha</label>
+                        <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Fecha</label>
-                    <input type="date" name="fechaEvento" th:value="${evento.getFecha()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <div class="form-group">
+                        <label>Duración (Horas)</label>
+                        <input type="number" name="horasEvento" th:value="${evento.getDuracion()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Duración (Horas)</label>
-                    <input type="number" name="horasEvento" th:value="${evento.getDuracion()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <div class="form-group">
+                        <label>Precio</label>
+                        <input type="number" name="montoEvento" th:value="${evento.getMonto()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Precio</label>
-                    <input type="number" name="montoEvento" th:value="${evento.getMonto()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <h3>Personal</h3>
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text" name="nombrePersonal" th:value="${personal.getNombre()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <h3>Personal</h3>
+                    <div class="form-group">
+                        <label>Rol</label>
+                        <input type="text" name="rolPersonal" th:value="${personal.getRol()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Nombre</label>
-                    <input type="text" name="nombrePersonal" th:value="${personal.getNombre()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <h3>Establecimiento</h3>
+                    <div class="form-group">
+                        <label>Nombre</label>
+                        <input type="text" name="Nombre_establecimiento" th:value="${establecimiento.getNombre()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <div class="form-group">
-                    <label>Rol</label>
-                    <input type="text" name="rolPersonal" th:value="${personal.getRol()}"
-                           class="form-control" disabled readonly/>
-                </div>
+                    <div class="form-group">
+                        <label>Dirección</label>
+                        <input type="text" name="direccionEstablecimiento" th:value="${establecimiento.getDireccion()}"
+                               class="form-control" disabled readonly/>
+                    </div>
 
-                <h3>Establecimiento</h3>
-
-                <div class="form-group">
-                    <label>Nombre</label>
-                    <input type="text" name="Nombre_establecimiento" th:value="${establecimiento.getNombre()}"
-                           class="form-control" disabled readonly/>
-                </div>
-
-                <div class="form-group">
-                    <label>Direccion</label>
-                    <input type="text" name="rolPersonal" th:value="${establecimiento.getDireccion()}"
-                           class="form-control" disabled readonly/>
-                </div>
-
-                <div class="form-group">
-                    <a class="btn btn-primary" th:href="@{/Cliente/eventos}">Volver</a>
+                    <div class="form-group">
+                        <a class="btn btn-primary" th:href="@{/Cliente/eventos}">Volver</a>
+                    </div>
                 </div>
             </div>
         </div>
