--- a/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
+++ b/Proyecto_LDPII/src/main/resources/templates/Cliente/eventos.html
@@ -2,11 +2,52 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina Principal - Cliente</title>
+    <title>Página Principal - Cliente</title>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
+    <style>
+        body {
+            background-image: url('https://img.freepik.com/fotos-premium/fondo-azul-cuadrado-cuadrado-puntos-medio_1122354-16579.jpg'); /* Reemplaza con la URL de la imagen de fondo */
+            background-size: cover;
+            background-position: center;
+        }
+        .container {
+            margin-top: 30px;
+        }
+        .table {
+            border-radius: 8px;
+            overflow: hidden; /* Para redondear los bordes de la tabla */
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Sombra para efecto de flotación */
+            color: white;
+        }
+        .table th, .table td {
+            border: none; /* Quitar el borde por defecto */
+        }
+        .table-dark {
+            background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro para el encabezado */
+        }
+        h1 {
+            text-align: left; 
+            font-family: Arial Black; 
+            font-weight: bold; 
+            font-size: 30px; 
+            color: white; /* Color del texto del título */
+            text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.4), 
+                         0px -1px 1px rgba(0, 0, 0, 0.3),
+                         0px 0px 5px rgba(0, 204, 255, 0.7); /* Efecto de sombra */
+        }
+        
+        .alert {
+            margin-top: 20px;
+        }
+        
+        tbody {
+        	background: #ffffff1f;
+    		backdrop-filter: blur(10px);
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -43,14 +84,10 @@
 
     <div th:if="${param.success}">
         <div class="alert alert-info">
-            Te has registrado con exito es nuestra aplicación.!
+            Te has registrado con éxito en nuestra aplicación!
         </div>
     </div>
-    <div th:if="${param.facturasuccess}">
-        <div class="alert alert-info">
-            Factura confirmada con exito.!
-        </div>
-    </div>
+
     <div th:if="${param.info}">
         <div class="alert alert-info">
             Evento eliminado!
