--- a/Proyecto_LDPII/src/main/resources/templates/error.html
+++ b/Proyecto_LDPII/src/main/resources/templates/error.html
@@ -2,12 +2,172 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pagina de Error</title>
+    <title>Página de Error</title>
     <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
             crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:400,800" rel="stylesheet">
+    <style>
+        body {
+            background-color: #416475;
+            margin: 0;
+            font-family: 'Montserrat', Helvetica, sans-serif;
+            color: #92a4ad;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+        h3 {
+            margin: 30px 15px;
+        }
+
+        .error-container {
+            font-size: 180px;
+            font-family: 'Catamaran', sans-serif;
+            font-weight: 800;
+            margin: 20px 15px;
+        }
+
+        .error-container > span {
+            display: inline-block;
+            line-height: 0.7;
+            position: relative;
+            color: #FFB485;
+        }
+
+        .error-container > span:nth-of-type(1) {
+            color: #D1F2A5;
+            animation: colordancing 4s infinite;
+        }
+
+        .error-container > span:nth-of-type(3) {
+            color: #F56991;
+            animation: colordancing2 4s infinite;
+        }
+
+        .error-container > span:nth-of-type(2) {
+            width: 120px;
+            height: 120px;
+            border-radius: 999px;
+        }
+
+        .error-container > span:nth-of-type(2):before,
+        .error-container > span:nth-of-type(2):after {
+            border-radius: 0%;
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: inherit;
+            height: inherit;
+            border-radius: 999px;
+            box-shadow: inset 30px 0 0 rgba(209, 242, 165, 0.4),
+            inset 0 30px 0 rgba(239, 250, 180, 0.4),
+            inset -30px 0 0 rgba(255, 196, 140, 0.4),
+            inset 0 -30px 0 rgba(245, 105, 145, 0.4);
+            animation: shadowsdancing 4s infinite;
+        }
+
+        .error-container > span:nth-of-type(2):before {
+            transform: rotate(45deg);
+        }
+
+        @keyframes shadowsdancing {
+            0% {
+                box-shadow: inset 30px 0 0 rgba(209, 242, 165, 0.4),
+                inset 0 30px 0 rgba(239, 250, 180, 0.4),
+                inset -30px 0 0 rgba(255, 196, 140, 0.4),
+                inset 0 -30px 0 rgba(245, 105, 145, 0.4);
+            }
+            25% {
+                box-shadow: inset 30px 0 0 rgba(245, 105, 145, 0.4),
+                inset 0 30px 0 rgba(209, 242, 165, 0.4),
+                inset -30px 0 0 rgba(239, 250, 180, 0.4),
+                inset 0 -30px 0 rgba(255, 196, 140, 0.4);
+            }
+            50% {
+                box-shadow: inset 30px 0 0 rgba(255, 196, 140, 0.4),
+                inset 0 30px 0 rgba(245, 105, 145, 0.4),
+                inset -30px 0 0 rgba(209, 242, 165, 0.4),
+                inset 0 -30px 0 rgba(239, 250, 180, 0.4);
+            }
+            75% {
+                box-shadow: inset 30px 0 0 rgba(239, 250, 180, 0.4),
+                inset 0 30px 0 rgba(255, 196, 140, 0.4),
+                inset -30px 0 0 rgba(245, 105, 145, 0.4),
+                inset 0 -30px 0 rgba(209, 242, 165, 0.4);
+            }
+            100% {
+                box-shadow: inset 30px 0 0 rgba(209, 242, 165, 0.4),
+                inset 0 30px 0 rgba(239, 250, 180, 0.4),
+                inset -30px 0 0 rgba(255, 196, 140, 0.4),
+                inset 0 -30px 0 rgba(245, 105, 145, 0.4);
+            }
+        }
+
+        @keyframes colordancing {
+            0% {
+                color: #D1F2A5;
+            }
+            25% {
+                color: #F56991;
+            }
+            50% {
+                color: #FFC48C;
+            }
+            75% {
+                color: #EFFAB4;
+            }
+            100% {
+                color: #D1F2A5;
+            }
+        }
+
+        @keyframes colordancing2 {
+            0% {
+                color: #FFC48C;
+            }
+            25% {
+                color: #EFFAB4;
+            }
+            50% {
+                color: #D1F2A5;
+            }
+            75% {
+                color: #F56991;
+            }
+            100% {
+                color: #FFC48C;
+            }
+        }
+
+        .link-container {
+            text-align: center;
+        }
+
+        a.more-link {
+            text-transform: uppercase;
+            font-size: 13px;
+            background-color: #92a4ad;
+            padding: 10px 15px;
+            border-radius: 0;
+            color: #416475;
+            display: inline-block;
+            margin-right: 5px;
+            margin-bottom: 5px;
+            line-height: 1.5;
+            text-decoration: none;
+            margin-top: 50px;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -21,8 +181,11 @@
         </button>
     </div>
 </nav>
-<div class="container">
-    <h3>Algo salió mal</h3>
+<div class="error-container">
+    <span>4</span>
+    <span><span class="screen-reader-text">0</span></span>
+    <span>4</span>
 </div>
+<h3>Algo salió mal</h3>
 </body>
 </html>
